Opened 5 years ago

Closed 3 weeks ago

#9287 closed defect (fixed)

MJPEG regression

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: mjpeg regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

http://ffmpeg.org/pipermail/ffmpeg-user/2021-June/053061.html
A user provided a mjpeg sample that cannot be decoded since 9c7ee37490d21350ab1a2e07069284daf1943e52

$ ffmpeg -i IMAG0065.AVI 
ffmpeg version N-102685-g591b88e678 Copyright (c) 2000-2021 the FFmpeg developers
  built with gcc 10 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      57.  0.100 / 57.  0.100
  libavcodec     59.  1.101 / 59.  1.101
  libavformat    59.  2.102 / 59.  2.102
  libavdevice    59.  0.100 / 59.  0.100
  libavfilter     8.  0.101 /  8.  0.101
  libswscale      6.  0.100 /  6.  0.100
  libswresample   4.  0.100 /  4.  0.100
  libpostproc    56.  0.100 / 56.  0.100
[avi @ 0x3842580] non-interleaved AVI
[mjpeg @ 0x3843980] dqt: 0 quant value
    Last message repeated 82 times
[avi @ 0x3842580] decoding for stream 0 failed
[avi @ 0x3842580] Could not find codec parameters for stream 0 (Video: mjpeg (MJPG / 0x47504A4D), none(bt470bg/unknown/unknown), 1280x720, 10777 kb/s): unspecified pixel format
Consider increasing the value for the 'analyzeduration' (0) and 'probesize' (5000000) options
Guessed Channel Layout for Input Stream #0.1 : mono
Input #0, avi, from 'IMAG0065.AVI':
  Duration: 00:00:02.97, start: 0.000000, bitrate: 10943 kb/s
  Stream #0:0: Video: mjpeg (MJPG / 0x47504A4D), none(bt470bg/unknown/unknown), 1280x720, 10777 kb/s, 29.95 fps, 29.95 tbr, 29.95 tbn
  Stream #0:1: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 11025 Hz, mono, s16, 176 kb/s
At least one output file must be specified

Attachments (1)

IMAG0065_cut.AVI (2.4 MB ) - added by Carl Eugen Hoyos 5 years ago.

Change History (2)

by Carl Eugen Hoyos, 5 years ago

Attachment: IMAG0065_cut.AVI added

comment:1 by Balling, 3 weeks ago

Resolution: fixed
Status: newclosed

OH, that one is fixed

[mjpeg @ 00000237e2cb0e40] dqt: 0 quant value 0KB sq=    0B
Input #0, avi, from 'C:\Users\ZAQU\Downloads\IMAG0065_cut.AVI':
  Duration: 00:00:01.87, start: 0.000000, bitrate: 10951 kb/s
  Stream #0:0: Video: mjpeg (Baseline) (MJPG / 0x47504A4D), yuvj422p(pc, bt470bg/unknown/unknown), 1280x720, 29.95 fps, 29.95 tbr, 29.95 tbn
  Stream #0:1: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 11025 Hz, 1 channels, s16, 176 kb/s
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value
[avi @ 00000237e2ccf340] Packet corrupt (stream = 0, dts = 52).
[swscaler @ 00000237e3861180] deprecated pixel format used, make sure you did set range correctly
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value
    Last message repeated 1 times
[swscaler @ 00000237e37f6380] deprecated pixel format used, make sure you did set range correctly
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value35KB sq=    0B
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value89KB sq=    0B
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value42KB sq=    0B
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value96KB sq=    0B
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value49KB sq=    0B
[mjpeg @ 00000237e2e83a40] dqt: 0 quant value03KB sq=    0B
    Last message repeated 1 times
[mjpeg @ 00000237e2e83a40] EOI missing, emulating sq=    0B
Note: See TracTickets for help on using tickets.